--- a/css/style.css
+++ b/css/style.css
@@ -72,3 +72,36 @@ footer {
     color: #fff;
     margin-top: 20px;
 }
+/* Estilos generales para la barra de navegación */
+.navbar {
+    background-color: #333;
+    overflow: hidden;
+    text-align: center;
+}
+
+/* Estilos para los enlaces dentro de la barra de navegación */
+.navbar a {
+    float: left;
+    display: block;
+    color: white;
+    padding: 14px 20px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 18px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+/* Efecto hover para los enlaces */
+.navbar a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/* Ajuste para pantallas pequeñas (responsive) */
+@media screen and (max-width: 600px) {
+    .navbar a {
+        float: none;
+        width: 100%;
+    }
+}
