--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* Estilos generales */
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Parkinsans", sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
