--- a/css/stylesInf.css
+++ b/css/stylesInf.css
@@ -7,8 +7,8 @@
     padding: 0px;
 }
 .contenedor{
-    width: 1340px;
-    height: 500px;
+    width: 1320px;
+    height: 700px;
     background-color: burlywood;
     margin: 10px;
     padding: 30px;
@@ -44,4 +44,19 @@
         float: none;
         width: 100%;
     }
+}
+.contenedor p {
+padding: 8px;
+}
+
+.contenedor button{
+    margin-top: 10px;
+    width: 150px;
+    padding: 10px;
+    background-color: white;
+    font-size: 15px;
+    border-radius: 10px;
+    border: none;
+    /*para poner en negrita las letras*/
+    font-weight: bold;
 }
